build/netbeans/Net/nbproject/private/Default-build.log
---------------------------------
prepare to make core -----
---------------------------------
ConfigParser.cpp
g++ -c -I/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core -DOS_BSD -Wall -std=c++11 -Os -fpermissive -g3 -fPIC -o /Users/ddk/Desktop/WorkSpace/Net/build/script/.im_build/Core/config/ConfigParser.o /Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/config/ConfigParser.cpp
In file included from /Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/config/ConfigParser.cpp:1:
In file included from /Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/NET_Core.hpp:90:
/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/platform/multiplex/MultiStruct.hpp:45:29: error: duplicate member 'event'
                ::std::vector<TIME_EVENT> event;
                                          ^
/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/platform/multiplex/MultiStruct.hpp:44:29: note: previous declaration is here
                ::std::vector<FILE_EVENT> event;
                                          ^
In file included from /Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/config/ConfigParser.cpp:1:
In file included from /Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/NET_Core.hpp:91:
/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/platform/multiplex/MultiBase.hpp:31:26: error: unknown type name 'CTimer'
                        void                    addTimer(const CTimer*);
                                                               ^
/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/platform/multiplex/MultiBase.hpp:32:4: error: unknown type name 'CTimer'
                        CTimer*                 getNearestTimer();
                        ^
/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/platform/multiplex/MultiBase.hpp:47:11: error: no template named 'list' in namespace 'std'
                        ::std::list<CTimer*>    m_lstTimer;
                        ~~~~~~~^
/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/platform/multiplex/MultiBase.hpp:47:16: error: use of undeclared identifier 'CTimer'
                        ::std::list<CTimer*>    m_lstTimer;
                                    ^
/Users/ddk/Desktop/WorkSpace/Net/build/script/../../src/core/platform/multiplex/MultiBase.hpp:47:23: error: expected expression
                        ::std::list<CTimer*>    m_lstTimer;
                                           ^
6 errors generated.
make: *** [/Users/ddk/Desktop/WorkSpace/Net/build/script/.im_build/Core/config/ConfigParser.o] Error 1
---------------- make core failed ---------------
